[package]

name = "heatshrink_byte"
version = "0.1.0"
edition = "2021"
authors = ["Frank A. Stevenson <root@localhost>","mean00"]
description = "A minimal implementation of the heatshrink compression algorithm for no_std environments"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mean00/heatshrink.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
encode = ["clap"]

[dependencies]
clap = { version = "3.1.18",features = ["derive"], optional = true}

[[bin]]
name = "heatshrink_rust"
required-features = ["encode"]

[lib]
name = "heatshrink_byte"
path = "src/lib.rs"
crate-type = ["rlib"] # Creates static lib

[profile.dev]
codegen-units = 1
debug = true
lto = true
opt-level       = 's'

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level       = 's'
